Mon Nov  3 20:11:55 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/driver/drv_mcpp_preproc.cpp:
        * TAO_IDL/driver/drv_preproc.cpp:

          Added CIAO_ROOT/ccm to include paths, this is present in the forthcoming
          CIAO version. 
        
Mon Nov  3 15:45:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Compression/lzo/LzoCompressor.cpp:
          Fixed compile errors when compiling it with the latest lzo library

Mon Nov  3 15:25:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Compression/lzo/LzoCompressor.cpp:
        * tao/Compression/lzo/LzoCompressor.h:
        * tao/Compression/lzo/LzoCompressor_export.h:
        * tao/Compression/lzo/LzoCompressor_Factory.cpp:
        * tao/Compression/lzo/LzoCompressor_Factory.h:
        * tao/Compression/lzo/TAO_LzoCompressor.pc.in:
        * tao/Compression/lzo/TAO_LzoCompressor.rc:
        * tao/LzoCompressor.mpc:
          Added lzo compressor. Need to be tested in all its detail, but
          lzo is disabled by default so we can safely added it to the repo

Mon Nov 03 14:13:12 UTC 2008  Tim Pollock  <pollockt@ociweb.com>

        * ACE_wrappers/TAO/orbsvcs/tests/Notify/Bug_2415_Regression/Supplier.cpp

          Fixed compiler warning.

Mon Nov  3 10:28:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_3486_Regression/*:
          New file for bugzilla 3486

Mon Nov  3 10:24:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Object_Ref_Table.cpp:
        * tao/Object_Ref_Table.h:
        * tao/Object_Ref_Table.inl:
        * tao/ORB.cpp:
        * tao/ORB.h:
          Added ORB::unregister_initial_reference to unregister a rir
          from the ORB. Usefull when we load and unload services on demand.
          Reported an enhancement request to the OMG. Also reworked the
          ORT a little bit to make sure we atomically update the table
