@@ -6,7 +6,6 @@ eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}'
 # -*- perl -*-
 
 use lib "$ENV{ACE_ROOT}/bin";
-use PerlACE::Run_Test;
 use PerlACE::TestTarget;
 
 $status = 0;
@@ -19,7 +18,7 @@ foreach $i (@ARGV) {
         $debug_level = '10';
         $debug_opts_sv = '-ORBLogFile server.log';
         $debug_opts_cl = '-ORBLogFile client.log';
-    } 
+    }
 }
 
 my $target = PerlACE::TestTarget::create_target ($PerlACE::TestConfig);
@@ -28,12 +27,7 @@ $iorbase = "server.ior";
 $iorfile = $target->LocalFile ("$iorbase");
 $target->DeleteFile($iorfile);
 
-if (PerlACE::is_vxworks_test()) {
-    $SV = new PerlACE::ProcessVX ("server", "-ORBDebuglevel $debug_level -o $iorbase");
-}
-else {
-    $SV = $target->CreateProcess ("server", "$debug_opts_sv -ORBdebuglevel $debug_level -o $iorfile");
-}
+$SV = $target->CreateProcess ("server", "$debug_opts_sv -ORBdebuglevel $debug_level -o $iorfile");
 $CL = $target->CreateProcess ("client", "$debug_opts_cl -ORBDebugLevel $debug_level -k file://$iorfile");
 
 $server = $SV->Spawn ();
@@ -43,12 +37,12 @@ if ($server != 0) {
     exit 1;
 }
 
-if ($target->WaitForFileTimed ($iorfile,
+if ($target->WaitForFileTimed ($iorbase,
                         $PerlACE::wait_interval_for_process_creation) == -1) {
     print STDERR "ERROR: cannot find file <$iorfile>\n";
     $SV->Kill (); $SV->TimedWait (1);
     exit 1;
-} 
+}
 
 $client = $CL->SpawnWaitKill (300);
 
@@ -66,7 +60,6 @@ if ($server != 0) {
 
 $target->GetStderrLog();
 
-#unlink $iorfile;
 $target->DeleteFile($iorfile);
 
 exit $status;
