@@ -6,7 +6,6 @@ eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}'
 # -*- perl -*-
 
 use lib "$ENV{ACE_ROOT}/bin";
-use PerlACE::Run_Test;
 use PerlACE::TestTarget;
 
 $status = 0;
@@ -26,12 +25,7 @@ $iorfile = $target->LocalFile ("$iorbase");
 $target->DeleteFile($iorfile);
 $host->DeleteFile($iorbase);
 
-if (PerlACE::is_vxworks_test()) {
-    $SV = new PerlACE::ProcessVX ("server", "-ORBObjRefStyle URL -ORBDebuglevel $debug_level -o $iorbase");
-}
-else {
-    $SV = $target->CreateProcess ("server", "-ORBObjRefStyle URL -ORBdebuglevel $debug_level -o $iorfile");
-}
+$SV = $target->CreateProcess ("server", "-ORBObjRefStyle URL -ORBdebuglevel $debug_level -o $iorfile");
 $CL = $host->CreateProcess ("client", "-k file://$iorbase");
 
 $server = $SV->Spawn ();
@@ -41,14 +35,14 @@ if ($server != 0) {
     exit 1;
 }
 
-if ($target->WaitForFileTimed ($iorfile,
+if ($target->WaitForFileTimed ($iorbase,
                         $PerlACE::wait_interval_for_process_creation) == -1) {
     print STDERR "ERROR: cannot find file <$iorfile>\n";
     $SV->Kill (); $SV->TimedWait (1);
     exit 1;
 }
 
-if ($target->GetFile ($iorfile, $iorbase) == -1) {
+if ($target->GetFile ($iorbase) == -1) {
     print STDERR "ERROR: cannot retrieve file <$iorfile>\n";
     $SV->Kill (); $SV->TimedWait (1);
     exit 1;
@@ -70,7 +64,7 @@ if ($server != 0) {
 
 $target->GetStderrLog();
 
-$target->DeleteFile($iorfile);
+$target->DeleteFile($iorbase);
 $host->DeleteFile ($iorbase);
 
 exit $status;
