@@ -6,7 +6,6 @@ eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}'
 # -*- perl -*-
 
 use lib "$ENV{ACE_ROOT}/bin";
-use PerlACE::Run_Test;
 use PerlACE::TestTarget;
 
 $status = 0;
@@ -15,7 +14,7 @@ $debug_level = '0';
 foreach $i (@ARGV) {
     if ($i eq '-debug') {
         $debug_level = '10';
-    } 
+    }
 }
 
 my $target = PerlACE::TestTarget::create_target ($PerlACE::TestConfig);
@@ -24,14 +23,9 @@ $iorbase = "server.ior";
 $iorfile = $target->LocalFile ("$iorbase");
 $target->DeleteFile($iorfile);
 
-if (PerlACE::is_vxworks_test()) {
-    $SV = new PerlACE::ProcessVX ("server", "-ORBDebuglevel $debug_level -o $iorbase");
-}
-else {
-    $SV = $target->CreateProcess ("server", "-ORBdebuglevel $debug_level -o $iorfile");
-}
+$SV = $target->CreateProcess ("server", "-ORBdebuglevel $debug_level -o $iorfile");
 $CL = $target->CreateProcess ("client", " -k file://$iorfile");
-    
+
 $server = $SV->Spawn ();
 
 if ($server != 0) {
@@ -39,12 +33,12 @@ if ($server != 0) {
     exit 1;
 }
 
-if ($target->WaitForFileTimed ($iorfile,
-                        $PerlACE::wait_interval_for_process_creation) == -1) {
+if ($target->WaitForFileTimed ($iorbase,
+                               $PerlACE::wait_interval_for_process_creation) == -1) {
     print STDERR "ERROR: cannot find file <$iorfile>\n";
     $SV->Kill (); $SV->TimedWait (1);
     exit 1;
-} 
+}
 
 $client = $CL->SpawnWaitKill (300);
 
